[gd_scene load_steps=14 format=3 uid="uid://bmrx40aplh6c1"]

[ext_resource type="Script" uid="uid://bm6q1hbhp1n24" path="res://main_window/extra_panels_widget/extra_panels_widget.gd" id="1_5x0ik"]
[ext_resource type="Texture2D" uid="uid://b6m2sbtuimpqj" path="res://main_window/extra_panels_widget/images/help.svg" id="1_ywxe7"]
[ext_resource type="Texture2D" uid="uid://ccsrvob7b0yy1" path="res://main_window/extra_panels_widget/images/saved_searches.svg" id="2_glr2q"]
[ext_resource type="Script" uid="uid://bqai4pv020yjf" path="res://custom/tooltip.gd" id="3_diiyk"]
[ext_resource type="Texture2D" uid="uid://c634eemojquwr" path="res://main_window/extra_panels_widget/images/bookmarks.svg" id="4_45dt0"]
[ext_resource type="Texture2D" uid="uid://bpfw6aor5w57f" path="res://main_window/extra_panels_widget/images/capture.svg" id="4_h4on7"]
[ext_resource type="Texture2D" uid="uid://cf50pfncbopt5" path="res://main_window/extra_panels_widget/images/notification_dot.svg" id="5_barx7"]

[sub_resource type="InputEventAction" id="InputEventAction_dtnv5"]
action = &"show_capture"

[sub_resource type="Shortcut" id="Shortcut_1oi36"]
events = [SubResource("InputEventAction_dtnv5")]

[sub_resource type="InputEventAction" id="InputEventAction_ux27k"]
action = &"show_bookmarks"

[sub_resource type="Shortcut" id="Shortcut_5eyie"]
events = [SubResource("InputEventAction_ux27k")]

[sub_resource type="InputEventAction" id="InputEventAction_j70y2"]
action = &"show_help"

[sub_resource type="Shortcut" id="Shortcut_ndv5d"]
events = [SubResource("InputEventAction_j70y2")]

[node name="ExtraPanelsWidget" type="VBoxContainer"]
offset_right = 28.0
offset_bottom = 102.0
size_flags_vertical = 10
theme_type_variation = &"TinySeparation"
script = ExtResource("1_5x0ik")

[node name="SavedSearches" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"LeftSidebarButton"
toggle_mode = true
shortcut_in_tooltip = false
icon = ExtResource("2_glr2q")

[node name="Tooltip" type="Node" parent="SavedSearches"]
script = ExtResource("3_diiyk")
text = "Show Saved Searches"

[node name="Capture" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"LeftSidebarButton"
toggle_mode = true
shortcut = SubResource("Shortcut_1oi36")
shortcut_in_tooltip = false
icon = ExtResource("4_h4on7")

[node name="Tooltip" type="Node" parent="Capture"]
script = ExtResource("3_diiyk")
text = "Show Capture"

[node name="Bookmarks" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"LeftSidebarButton"
toggle_mode = true
shortcut = SubResource("Shortcut_5eyie")
shortcut_in_tooltip = false
icon = ExtResource("4_45dt0")

[node name="Tooltip" type="Node" parent="Bookmarks"]
script = ExtResource("3_diiyk")
text = "Show Bookmarks"

[node name="TodayCount" type="Label" parent="Bookmarks"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 8.0
offset_right = 16.0
offset_bottom = 22.0
size_flags_horizontal = 4
theme_type_variation = &"TodayCountLabel"
text = "9
"

[node name="NotificationDot" type="TextureRect" parent="Bookmarks"]
unique_name_in_owner = true
self_modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 16.0
offset_top = 3.0
offset_right = 23.0
offset_bottom = 10.0
texture = ExtResource("5_barx7")

[node name="Spacer" type="Control" parent="."]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2

[node name="Help" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"LeftSidebarButton"
toggle_mode = true
shortcut = SubResource("Shortcut_ndv5d")
shortcut_in_tooltip = false
icon = ExtResource("1_ywxe7")

[node name="Tooltip" type="Node" parent="Help"]
script = ExtResource("3_diiyk")
text = "Show Help"
